--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,10 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  <%= ENV['DATABASE_HOST'] && "host: #{ENV['DATABASE_HOST']}" %>
+  <%= ENV['DATABASE_PORT'] && "port: #{ENV['DATABASE_PORT']}" %>
+  <%= ENV['DATABASE_USERNAME'] && "username: #{ENV['DATABASE_USERNAME']}" %>
+  <%= ENV['DATABASE_PASSWORD'] && "password: #{ENV['DATABASE_PASSWORD']}" %>
 
 development:
   <<: *default
